multi-language display with flag-icons

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_URL=http://localhost:8080
-VITE_SHOW_ADMIN_LOGIN=true
+VITE_API_URL=https://api.solveylabs.com
+VITE_SHOW_ADMIN_LOGIN=false
 
 /*ne production e bejme show admin false */
