--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "country-flag-icons": "^1.5.21",
     "i18next": "^25.6.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.1.1",
