--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
+# url ne te cilin frontendi komunikon me backendin
 VITE_API_URL=https://api.solveylabs.com
-VITE_SHOW_ADMIN_LOGIN=false
 
-/*ne production e bejme show admin false */
+VITE_SHOW_ADMIN_LOGIN=false
