--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/react": "^6.0.2",
     "axios": "^1.13.2",
     "country-flag-icons": "^1.5.21",
     "i18next": "^25.6.1",
