--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # url ne te cilin frontendi komunikon me backendin
-VITE_API_URL=https://api.solveylabs.com
+# VITE_API_URL=https://api.solveylabs.com
+VITE_API_URL=http://localhost:8080
 
 VITE_SHOW_ADMIN_LOGIN=false
